--- a/my-app/.eslintrc
+++ b/my-app/.eslintrc
@@ -18,12 +18,7 @@
     "react"
   ],
   "rules": {
-    "react/jsx-filename-extension": [
-      1,
-      { "extensions": [".js", ".jsx"
-        ]
-      }
-    ],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"]}],
     "linebreak-style": 0
   }
 }
