--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "reactfire": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
@@ -40,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
