--- a/my-app/.eslintrc
+++ b/my-app/.eslintrc
@@ -19,7 +19,8 @@
   ],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"]}],
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "jsx-a11y/label-has-associated-control": "off"
   }
 }
 
