falta corregir errores

--- a/my-app/.eslintrc
+++ b/my-app/.eslintrc
@@ -20,7 +20,8 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"]}],
     "linebreak-style": 0,
-    "jsx-a11y/label-has-associated-control": "off"
+    "jsx-a11y/label-has-associated-control": "off",
+    "no-restricted-exports": ["error", { "restrictedNamedExports": ["default"] }]
   }
 }
 
